add: flight_stack env

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = skiffos
 	url = https://github.com/skiffos/skiffos.git
 	branch = release-2021.08
+[submodule "configs/env/flight_stack"]
+	path = configs/env/flight_stack
+	url = https://github.com/aau-cns/flight_stack_env.git
